--- a/css/styles.css
+++ b/css/styles.css
@@ -515,4 +515,24 @@ body {
   margin-bottom: 20px;
 }
 
+.scroll-top {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  background-color: #8b8b8b;
+  position: sticky;
+  left: 94%;
+  bottom: 10px;
+  color: white;
+  font-weight: 800;
+}
+
+.scroll-top:hover {
+  cursor: pointer;
+  background-color: #5a5a5a;
+}
+
 /*# sourceMappingURL=styles.css.map */
