--- a/css/styles.css
+++ b/css/styles.css
@@ -120,11 +120,11 @@ header ul li .item:hover:after {
 }
 
 .btn-fancyPrimary {
-  background-color: #0c0c0c !important;
+  background-color: #118a8a !important;
   color: #fff !important;
 }
 .btn-fancyPrimary:hover {
-  background-color: #292929 !important;
+  background-color: #1f7a86 !important;
   box-shadow: 2px 2px 20px 0px #80808052;
 }
 
@@ -176,9 +176,6 @@ body {
   width: 70%;
   justify-content: center;
   margin: 5% auto;
-}
-.categoria h2 {
-  font-weight: 600;
 }
 .categoria .lista-categorias {
   display: flex;
@@ -371,7 +368,7 @@ body {
 }
 
 .exclusivos {
-  background-color: rgba(0, 0, 0, 0.26);
+  background-color: rgba(123, 255, 255, 0.17);
   padding: 5% 0;
   margin: 5% auto;
 }
@@ -400,7 +397,7 @@ body {
 .exclusivos__information {
   display: grid;
   height: min-content;
-  row-gap: 20px;
+  text-align: center;
 }
 
 .buscador {
@@ -412,7 +409,6 @@ body {
   text-align: center;
   width: 100%;
   justify-content: center;
-  display: flex;
   font-size: 2rem;
   font-weight: 600;
 }
@@ -439,6 +435,7 @@ body {
   display: grid;
   cursor: pointer;
   padding: 10px;
+  border-radius: 20px;
 }
 .joyas .lista-joyas .lista-item:hover {
   box-shadow: 2px 2px 20px 0px #80808052;
@@ -492,6 +489,8 @@ body {
 }
 .suscribete .suscripcion__text {
   margin: 6em 3em;
+  display: grid;
+  row-gap: 20px;
 }
 .suscribete .suscripcion__text h5 {
   color: #8b8b8b;
@@ -533,6 +532,24 @@ body {
 .scroll-top:hover {
   cursor: pointer;
   background-color: #5a5a5a;
+}
+
+.subtitle > h3, h2 {
+  font-weight: 600;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  column-gap: 10px;
+  justify-content: center;
+}
+
+.subtitle > h3::before, h3::after {
+  content: "";
+  width: 50px;
+  height: 3px;
+  background: #8dceae;
+  display: flex;
+  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
