--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ header ul li {
 }
 header ul li .item {
   position: relative;
-  color: #333;
+  color: #118a8a;
 }
 header ul li .item:after {
   content: "";
@@ -22,7 +22,7 @@ header ul li .item:after {
 }
 header ul li .item:hover:after {
   width: 100%;
-  background: #333;
+  background: #118a8a;
 }
 
 .presentation {
@@ -33,7 +33,7 @@ header ul li .item:hover:after {
   min-height: 45em;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: #41464b;
+  background-color: #118a8a;
   border-radius: 0 0 0 50%;
 }
 @media (max-width: 1250px) {
@@ -413,6 +413,39 @@ body {
   font-weight: 600;
 }
 
+.lista-joyas,
+.lista-busqueda,
+.lista-carrito {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 30px;
+  row-gap: 30px;
+}
+.lista-joyas .lista-item,
+.lista-busqueda .lista-item,
+.lista-carrito .lista-item {
+  width: 270px;
+  display: grid;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 20px;
+  text-align: center;
+}
+.lista-joyas .lista-item:hover,
+.lista-busqueda .lista-item:hover,
+.lista-carrito .lista-item:hover {
+  box-shadow: 2px 2px 20px 0px #80808052;
+}
+.lista-joyas .item,
+.lista-busqueda .item,
+.lista-carrito .item {
+  width: 250px;
+  height: 250px;
+  cursor: pointer;
+  border-radius: 15%;
+  margin-bottom: 20px;
+}
+
 .joyas {
   display: grid;
   text-align: center;
@@ -422,30 +455,6 @@ body {
 }
 .joyas h2 {
   font-weight: 600;
-}
-.joyas .lista-joyas {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 30px;
-  row-gap: 30px;
-  justify-content: center;
-}
-.joyas .lista-joyas .lista-item {
-  width: 270px;
-  display: grid;
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 20px;
-}
-.joyas .lista-joyas .lista-item:hover {
-  box-shadow: 2px 2px 20px 0px #80808052;
-}
-.joyas .lista-joyas .item {
-  width: 250px;
-  height: 250px;
-  cursor: pointer;
-  border-radius: 15%;
-  margin-bottom: 20px;
 }
 .joyas .lista-joyas .joya6 {
   background-image: url("../assets/images/anillos3.jpg");
@@ -506,12 +515,32 @@ body {
   display: flex;
 }
 
-.lista-busqueda .item, .lista-carrito .item {
-  width: 250px;
-  height: 250px;
-  cursor: pointer;
-  border-radius: 15%;
-  margin-bottom: 20px;
+.carrito {
+  display: grid;
+  grid-template-columns: 1fr 500px;
+}
+@media (max-width: 900px) {
+  .carrito {
+    grid-template-columns: 1fr;
+  }
+}
+.carrito__tabla, .carrito__informacion {
+  padding: 2em;
+}
+.carrito__informacion {
+  display: grid;
+  row-gap: 15px;
+}
+.carrito__informacion .carrito__subtotal,
+.carrito__informacion .carrito__total {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-size: 1.2rem;
+}
+.carrito__informacion .carrito__subtotal span:nth-child(2),
+.carrito__informacion .carrito__total span:nth-child(2) {
+  text-align: end;
+  font-size: 1.2em;
 }
 
 .scroll-top {
@@ -534,7 +563,8 @@ body {
   background-color: #5a5a5a;
 }
 
-.subtitle > h3, h2 {
+.subtitle > h3,
+h2 {
   font-weight: 600;
   display: flex;
   text-align: center;
@@ -543,13 +573,84 @@ body {
   justify-content: center;
 }
 
-.subtitle > h3::before, h3::after {
+.subtitle > h3::before,
+h3::after {
   content: "";
   width: 50px;
   height: 3px;
   background: #8dceae;
   display: flex;
   text-align: center;
+}
+
+.toast {
+  width: 250px;
+  height: 100px;
+  border-radius: 10px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 999;
+  padding: 20px;
+  font-size: 1.2em;
+  font-weight: 600;
+}
+.toast .success {
+  background-color: #8dceadd3;
+  color: #008f6b;
+}
+.toast .error {
+  background-color: #cfc201d3;
+  color: #f4ff57;
+}
+
+.hide {
+  display: none;
+  animation: fadeOutAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+.noMostrar {
+  display: none;
+}
+
+.mostrar {
+  display: block;
+}
+
+.show {
+  display: block;
+  animation: fadeInAnimation ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeOutAnimation {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.checkout {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 50px;
+}
+@media (max-width: 900px) {
+  .checkout {
+    grid-template-columns: 1fr;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
