--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -157,6 +157,35 @@ body {
   }
 }
 
+.lista-joyas,
+.lista-busqueda,
+.lista-carrito {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 30px;
+  row-gap: 30px;
+
+  .lista-item {
+    width: 270px;
+    display: grid;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 20px;
+    text-align: center;
+    &:hover {
+      box-shadow: 2px 2px 20px 0px #80808052;
+    }
+  }
+
+  .item {
+    width: 250px;
+    height: 250px;
+    cursor: pointer;
+    border-radius: 15%;
+    margin-bottom: 20px;
+  }
+}
+
 .joyas {
   display: grid;
   text-align: center;
@@ -168,31 +197,6 @@ body {
   }
 
   .lista-joyas {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 30px;
-    justify-content: center;
-
-    .lista-item {
-      width: 270px;
-      display: grid;
-      cursor: pointer;
-      padding: 10px;
-      border-radius: 20px;
-      &:hover {
-        box-shadow: 2px 2px 20px 0px #80808052;
-      }
-    }
-
-    .item {
-      width: 250px;
-      height: 250px;
-      cursor: pointer;
-      border-radius: 15%;
-      margin-bottom: 20px;
-    }
-
     .joya6 {
       background-image: url("../assets/images/anillos3.jpg");
       background-size: cover;
@@ -268,13 +272,43 @@ body {
   }
 }
 
-.lista-busqueda, .lista-carrito {
-  .item {
-    width: 250px;
-    height: 250px;
-    cursor: pointer;
-    border-radius: 15%;
-    margin-bottom: 20px;
+// .lista-busqueda, .lista-carrito {
+//   .item {
+//     width: 250px;
+//     height: 250px;
+//     cursor: pointer;
+//     border-radius: 15%;
+//     margin-bottom: 20px;
+//   }
+// }
+
+.carrito {
+  display: grid;
+  grid-template-columns: 1fr 500px;
+
+  @media (max-width: 900px) {
+    grid-template-columns: 1fr;
+  }
+
+  &__tabla,
+  &__informacion {
+    padding: 2em;
+  }
+
+  &__informacion {
+    display: grid;
+    row-gap: 15px;
+
+    .carrito__subtotal,
+    .carrito__total {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      font-size: 1.2rem;
+      span:nth-child(2) {
+        text-align: end;
+        font-size: 1.2em;
+      }
+    }
   }
 }
 
@@ -298,7 +332,8 @@ body {
   background-color: #5a5a5a;
 }
 
-.subtitle > h3, h2 {
+.subtitle > h3,
+h2 {
   font-weight: 600;
   display: flex;
   text-align: center;
@@ -307,11 +342,87 @@ body {
   justify-content: center;
 }
 
-.subtitle > h3::before, h3::after {
+.subtitle > h3::before,
+h3::after {
   content: "";
   width: 50px;
   height: 3px;
   background: #8dceae;
   display: flex;
   text-align: center;
+}
+
+.toast {
+  width: 250px;
+  height: 100px;
+  border-radius: 10px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 999;
+  padding: 20px;
+  font-size: 1.2em;
+  font-weight: 600;
+
+  .success {
+    background-color: #8dceadd3;
+    color: rgb(0, 143, 107);
+  }
+  
+  
+  .error {
+    background-color: #cfc201d3;
+    color: rgb(244, 255, 87);
+  }
+}
+
+
+
+.hide {
+  display: none;
+  animation: fadeOutAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+.noMostrar {
+  display: none;
+}
+
+.mostrar {
+  display: block;
+}
+
+.show {
+  display: block;
+  animation: fadeInAnimation ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOutAnimation {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.checkout {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 50px;
+  @media (max-width: 900px) {
+      grid-template-columns: 1fr;
+  }
 }
